java/java-tests/testData/codeInsight/daemonCodeAnalyzer/implicitClass/ImplicitModuleImportFail.java
void <error descr="Compact source files are not supported at language level '24'">main</error>() {
  <error descr="Cannot resolve symbol 'List'">List</error><String> a = new <error descr="Cannot resolve symbol 'ArrayList'">ArrayList</error><>();
}